--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
 		
 		
 		</div> 
-        <footer>
-            <p>© 2024 Все права защищены.</p>
-        </footer>
+        <div class="futer">
+			<footer>
+				<p>© 2024 Все права защищены.</p>
+			</footer>
+		</div>
 </body>
 </html>
